# regen

./: Cargo.toml  issues.md  plan.md  readme.md  todo.md
cli/: Cargo.toml
cli/src/: ffi_libs.rs  main.rs  (+2 more)
compiler/: Cargo.toml
design/: functions.md
examples/: c.gen  c_parity.gen  containers.gen  core.gen  effect_feature.gen  macros.gen  metaprogramming.gen  milestone1_concise.gen  milestone2_expose_env.gen  new_features.gen  pong.gen  prelude.gen  reactive_sdl.gen  reactive_sdl2.gen  scratchpad.gen  scrub.gen  sdl_example.gen  subgraphs.gen  test.gen  tetris.gen
regen.syntax.vscode-0.0.1/: package.json  readme.md
regen_cli/: Cargo.toml
regen_core/: Cargo.toml
regen_core/src/: alt_parse.rs  compile.rs  debug.rs  dependencies.rs  env.rs  error.rs  event_loop.rs  expr_macros.rs  ffi_ccall.rs  ffi_libs.rs  graph.rs  hotload.rs  hotload_diff.rs  hotload_reactive.rs  interop.rs  interpret.rs  lexer.rs  lib.rs  node_builder.rs  node_macros.rs  parse.rs  perm_alloc.rs  region.rs  semantic.rs  sexp.rs  symbols.rs  test.rs  typecheck.rs  types.rs
regen_core/src/bytecode/: definition.rs  display.rs  mod.rs
regen_core/src/parse/: alt_parse.rs  expr.rs  lexer.rs  mod.rs  parse.rs  sexp.rs  templates.rs
regen_libs/: list.gen  prelude.gen  sdl2.gen  window.gen
regen_wasm/: Cargo.toml  example.html  index.js
src/: bytecode.rs  compile.rs  env.rs  ffi.rs  interpret.rs  main.rs  parse.rs  perm_alloc.rs  symbols.rs  test.rs  types.rs  watcher.rs
tests/: Cargo.toml  c_parity.gen
thoughts/: bootstrapping.md  bootstrapping2.md
wasm/: Cargo.toml  index.js
(+90 files in other folders)
